# bitvec

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: CI.yml  deploy.yml  python-package.yml  tests.yml
binary/: __init__.py  binary_class.py
binary/common/: __init__.py  utils.py
binary/common/aritmetic/: __init__.py  aritmetic_base.py
binary/common/compare/: __init__.py  compare_base.py
binary/tests/: binary_test.py
floats/: __init__.py
pybytes/: __init__.py  binary_class.py
pybytes/common/: utils.py
pybytes/common/aritmetic/: __init__.py  aritmetic_base.py
pybytes/floats/: __init__.py
pybytes/pybytes_Lord225.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pybytes/tests/: binary_test.py
python/bitvec/: __init__.py  bitvec.pyi
python/bitvec/alias/: __init__.py
python/bitvec/arithm/: __init__.pyi
python/examples/: bit_packing.py  emulate_cpu.py  sieve_of_eratosthenes.py
python/floats/: __init__.py
python/pybytes/: __init__.py  pybytes.pyi
python/pybytes/alias/: __init__.py
python/pybytes/arithm/: __init__.pyi
python/tests/: tests.py
src/: lib.rs
src/arithm/: add.rs  bitwise.rs  bitwise_map.rs  concat.rs  flags.rs  hamming_distance.rs  mod.rs  mul.rs  shifts.rs  sub.rs  utility.rs
src/binary/: mod.rs  reduce.rs  sliceunpack.rs
src/cmp/: mod.rs
src/pybytes/: __init__.py  aliases.py  binary_class.py
src/pybytes/common/: __init__.py  utils.py
src/pybytes_Lord225.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/tests/: binary_test.py
src/utility/: mod.rs
(+6 files in other folders)
