[package]
name = "bitvec"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "bitvec"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.5", features = ["extension-module"] }
bv = "0.11.1"

[package.metadata.maturin]
python-source = "python"

[profile.release]
lto = true
opt-level = 3